--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
